NOTICKET: Massive improvements and code optimizations
